# rosconsole_bridge

./: CMakeLists.txt  package.xml
include/rosconsole_bridge/: bridge.h
src/: bridge.cpp
test/: cleanup.cpp
