<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosconsole_bridge</name>
  <version>1.0.0</version>
  <description>rosconsole_bridge is a package used in conjunction with console_bridge and rosconsole for connecting console_bridge-based logging to rosconsole-based logging.</description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/rosconsole_bridge</url>
  <url type="bugtracker">https://github.com/ros/rosconsole_bridge/issues</url>
  <url type="repository">https://github.com/ros/rosconsole_bridge</url>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>console_bridge_vendor</depend>

</package>
